# BioclimmaticPergolaCalculator

./: .content_protection_hashes.json  .env.example  .gitignore  .replignore  .replit  CHANGELOG.txt  CONTENT_POLICY.md  README.md  RESTORE_INSTRUCTIONS.md  RESTORE_VERSION_4.7.9.md  VERSION.txt  add_yandex_metrika.py  animations.py  app.py  app.py.backup  app.py.backup_v474  app_basic.py  app_basic.py.bak  app_basic.py.descriptions.backup  app_fixed.py  auto_scroll.py  backup_manager.py  basic_pdf_export.py  content_protection.py  debug_calculation.py  direct_buttons.py  embed_code_for_tilda.html  export_prices.py  extracted_svg_code.py  fetch_original_styles.py  fix_top_padding.py  floating_buttons.py  force_white_background.py  generate_csvs.py  heic_converter.py  iframe_detector.py  iframe_optimizer.py  image_cache.py  improved_pdf_export.py  init_db.py  (+31 more)
.agents/: agent_assets_metadata.toml
.streamlit/: config.toml  custom_styles.css
assets/: PDF_EXPORT_IMPLEMENTATION_GUIDE.md  convert_svg_to_png.py  prepare_pdf_assets.py  test_pdf_header.py  test_pdf_header_2.py
attached_assets/: PDF_EXPORT_IMPLEMENTATION_GUIDE.md  Pasted---1746991273314.txt  Pasted---1776104661959_1776104661959.txt  Pasted--Claude-Vision-Flask--1776186013907_1776186013907.txt  Pasted--DECOLIFE-1-0--1772482172222_1772482172223.txt  Pasted--DOCTYPE-html-html-lang-ru-head-meta-charset-UTF-8-meta_1776592010427.txt  Pasted--Decolife--1746991205821.txt  Pasted--Decolife--1776793528541_1776793528542.txt  Pasted--Flask-env--1777499288634_1777499288635.txt  Pasted--Flask-iframe--1773565112652_1773565112652.txt  Pasted--PDF-Back-1772466106750_1772466106751.txt  Pasted--REPLIT-AI-AGENT--1776279643515_1776279643515.txt  Pasted--REPLIT-AI-AGENT-v3--1776284784033_1776284784034.txt  Pasted--RUTUBE--1776319002715_1776319002716.txt  Pasted--Replit-Agent--1774778708880_1774778708881.txt  Pasted--Replit-Agent--1776680219814_1776680219814.txt  Pasted--Streamlit--1744531172789.txt  (+13 more)
(+329 files in other folders)
