[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fpdf>=1.7.2",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "reportlab>=4.3.1",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
]
