[tool.poetry]
name = "pergola-calculator"
version = "4.2.2"
description = "Калькулятор стоимости пергол различных типов и конфигураций"
authors = ["Decolife Admin"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
streamlit = "1.31.0"
pandas = "2.0.3"
pillow = "10.1.0"
reportlab = "4.0.7"
fpdf = "1.7.2"
beautifulsoup4 = "4.12.2"
trafilatura = "1.6.1"
st-annotated-text = "4.0.0"
components = "^0.0.1a0"
pytz = "^2025.2"
cairosvg = "^2.7.1"
flask = "^3.1.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
pypdf2 = "^3.0.1"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"